--- a/PalettePal web/Pages/Index2.html
+++ b/PalettePal web/Pages/Index2.html
@@ -33,13 +33,13 @@
         </div>
 
         <div class="image">
-            <div class="test"></div>
-            <img src="\wwwroot\default.png"/>
-            <img id="form-image" height="500" width="500" />
+            <img id="form-image" src="\wwwroot\default.png"/>
         </div>
 
         <div class="palette">
-
+            <h1>Палитра</h1>
+            Нажмите, чтобы скопировать цвет
+            <div class="colors-list"></div>
         </div>
 
         <footer>
