--- a/PalettePal web/Pages/Index2.html
+++ b/PalettePal web/Pages/Index2.html
@@ -37,9 +37,11 @@
         </div>
 
         <div class="palette">
-            <h1>Палитра</h1>
-            Нажмите, чтобы скопировать цвет
-            <div class="colors-list"></div>
+            <div class="palette-content">
+                <h1>Палитра</h1>
+                Нажмите, чтобы скопировать цвет
+                <div class="colors-list"></div>
+            </div>
         </div>
 
         <footer>
