Finished base main page design

--- a/PalettePal web/Pages/Index2.html
+++ b/PalettePal web/Pages/Index2.html
@@ -40,12 +40,20 @@
             <div class="palette-content">
                 <h1>Палитра</h1>
                 Нажмите, чтобы скопировать цвет
-                <div class="colors-list"></div>
+                <ol class="colors-list">
+                    <li>#9f5146</li>
+                    <li>#b8aea0</li>
+                    <li>#808ca0</li>
+                    <li>#9f5146</li>
+                    <li>#b8aea0</li>
+                    <li>#808ca0</li>
+                </ol>
             </div>
         </div>
 
         <footer>
-
+            Разработано <a href="https://vk.com/id139679525">Александр Богачёв</a><br>
+            Дизайн <a href="https://www.instagram.com/ka_zonova">ka_zonova</a>
         </footer>
     </body>
 </html>
